--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-local-storage": "^0.5.0",
-    "underscore": "^1.8.3"
+    "fuse.js": "^2.5.0",
+    "underscore": "^1.8.3",
+    "waud.js": "^0.8.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
