--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "angular": "^1.5.8",
     "angular-local-storage": "^0.5.0",
     "fuse.js": "^2.5.0",
-    "underscore": "^1.8.3",
-    "waud.js": "^0.8.1"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
